restyling, making searchable, sortable

--- a/mockdata-frontend/angular.json
+++ b/mockdata-frontend/angular.json
@@ -20,11 +20,12 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.png",
               { "glob": "**/*", "input": "node_modules/ngx-monaco-editor/assets/monaco", "output": "./assets/monaco/" },
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
@@ -93,7 +94,7 @@
               "**/node_modules/**"
             ]
           }
-        },
+        }
       }
     }},
   "defaultProject": "mockdata-frontend"
