--- a/mockdata-frontend/package.json
+++ b/mockdata-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@fortawesome/fontawesome-free": "~5.7.2",
     "chart.js": "~2.8.0",
     "ngx-monaco-editor": "~8.0.0",
     "primeicons": "~2.0.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
+    "@fortawesome/fontawesome-free": "~5.7.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
