No more pm2. Only docker

--- a/mockdata-backend/Dockerfile
+++ b/mockdata-backend/Dockerfile
@@ -1,9 +1,9 @@
-FROM keymetrics/pm2:latest-alpine
+FROM node:lts-alpine
 
 WORKDIR /node
 
 COPY . .
 
-CMD [ "pm2-runtime", "start", "pm2.json" ]
+CMD [ "npm", "start" ]
 
 EXPOSE 80
