--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 public:
     build: ./mockdata-frontend
+    restart: always
     ports:
         - 8086:80
 server:
     build: ./mockdata-backend
+    restart: always
     volumes:
         - ./mockdata-backend/config.json:/node/config.json
     ports:
