--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ server:
     restart: always
     volumes:
         - ./mockdata-backend/config.json:/node/config.json
+        - ./mockdata-backend/admins.json:/node/admins.json
     ports:
         - 80:80
