--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-public:
-    build: ./mockdata-frontend
-    restart: always
-    ports:
-        - 8086:80
-server:
-    build: ./mockdata-backend
-    restart: always
-    volumes:
-        - ./mockdata-backend/config.json:/node/config.json
-        - ./mockdata-backend/admins.json:/node/admins.json
-    ports:
-        - 80:80
+jumbaliar_frontend:
+  image: kyjus25/jumbaliar-frontend
+  restart: always
+  environment:
+    - BACKEND_URL=http://localhost
+  ports:
+      - 8086:80
+jumbaliar_backend:
+  image: kyjus25/jumbaliar-backend
+  restart: always
+  volumes:
+      - ./config.json:/node/config.json
+  ports:
+      - 80:80
