correct volumes paths

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ jumbaliar_backend:
   image: kyjus25/jumbaliar-backend
   restart: always
   volumes:
-      - ./config.json:/node/config.json
-      - ./proxy.json:/node/proxy.json
+      - ./mockdata-backend/config.json:/node/config.json
+      - ./mockdata-backend/proxy.json:/node/proxy.json
   ports:
       - 80:80
