--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -1,13 +1,14 @@
-public:
+jumbaliar_frontend:
     build: ./mockdata-frontend
     restart: always
     ports:
         - 8086:80
-server:
+jumbaliar_backend:
     build: ./mockdata-backend
     restart: always
     volumes:
         - ./mockdata-backend/config.json:/node/config.json
-        - ./mockdata-backend/admins.json:/node/admins.json
+        - ./mockdata-backend/proxy.json:/node/proxy.json
+        - ./mockdata-backend/images:/node/images
     ports:
         - 80:80
