--- a/mockdata-backend/package.json
+++ b/mockdata-backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "~0.20.0",
     "cors": "~2.8.5",
-    "express": "~4.17.1"
+    "express": "~4.17.1",
+    "multer": "~1.4.2"
   }
 }
