fix build-docker-compose.yml script. remove bad data. add in temp data for proxy.json. add in new creator and Used By fields. add new stop npm command.

--- a/mockdata-backend/config.json
+++ b/mockdata-backend/config.json
@@ -1,1 +1,1 @@
-[{"path":"jumbauser","method":"full","body":{}},{"path":"test","method":"get","body":[]}]
+[{"path":"asdf","method":"get","creator":"braden","usedBy":["houston","registration","techSetup"],"body":[]}]
