--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -1,14 +1,16 @@
 jumbaliar_frontend:
-    build: ./mockdata-frontend
-    restart: always
-    ports:
-        - 8086:80
+  build: ./mockdata-frontend
+  restart: always
+  environment:
+    - BACKEND_URL=http://localhost
+  ports:
+    - 8086:80
 jumbaliar_backend:
-    build: ./mockdata-backend
-    restart: always
-    volumes:
-        - ./mockdata-backend/config.json:/node/config.json
-        - ./mockdata-backend/proxy.json:/node/proxy.json
-        - ./mockdata-backend/uploads:/node/uploads
-    ports:
-        - 80:80
+  build: ./mockdata-backend
+  restart: always
+  volumes:
+    - ./mockdata-backend/config.json:/node/config.json
+    - ./mockdata-backend/proxy.json:/node/proxy.json
+    - ./mockdata-backend/uploads:/node/uploads
+  ports:
+    - 80:80
