--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "install": "cd ./mockdata-backend; npm i; cd ../mockdata-frontend; npm i;",
-    "start": "docker-compose down; cd ./mockdata-frontend; ng build --prod; docker-compose -f ../build-docker-compose.yml up --build --detach;"
+    "start": "docker-compose down; cd ./mockdata-frontend; ng build --prod; docker-compose -f ../build-docker-compose.yml up --build --detach;",
+    "stop": "docker-compose down;"
   },
   "author": "",
   "license": "ISC",
