make generic. fix capitalization. add check for conflicting path-method endpoints. add n/a. add default JumbaLiar for creator and usedBy.

--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -3,6 +3,8 @@ jumbaliar_frontend:
   restart: always
   environment:
     - BACKEND_URL=http://localhost
+    - CREATORS=Jumbaliar
+    - FRONTENDS=Jumbaliar
   ports:
     - 8086:80
 jumbaliar_backend:
